testsuite/tests/ghc-regress/parser/should_fail/read009.stderr

read009.hs:12:0: parse error (possibly incorrect indentation)
